--- a/Autocrazer/Autocrazer.csproj
+++ b/Autocrazer/Autocrazer.csproj
@@ -104,6 +104,7 @@
     <Content Include="css\style.css" />
     <Content Include="ctgrydisplay.aspx" />
     <Content Include="displayprodt.aspx" />
+    <Content Include="giteg.aspx" />
     <Content Include="Hmpg.aspx" />
     <Content Include="copoimages\a-1.jpg" />
     <Content Include="copoimages\a-2.jpg" />
@@ -255,6 +256,13 @@
     </Compile>
     <Compile Include="displayprodt.aspx.designer.cs">
       <DependentUpon>displayprodt.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="giteg.aspx.cs">
+      <DependentUpon>giteg.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="giteg.aspx.designer.cs">
+      <DependentUpon>giteg.aspx</DependentUpon>
     </Compile>
     <Compile Include="Hmpg.aspx.cs">
       <DependentUpon>Hmpg.aspx</DependentUpon>
